kubernetes/service/service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata: 
  name: microservice-one-service
spec:
  selector:
    app: microservice-one
  ports:
  - protocol: TCP
    port: 3200
    targetPort: 3000
